--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ p { padding: 0.5em 1em;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 22px;
    }
 h1::after {
     content: "";
