--- a/css/main-style.css
+++ b/css/main-style.css
@@ -67,3 +67,32 @@ h3 {
 .links:hover {
   background-color:#4ec4d3;
   color: #fff}
+nav ul{
+  display: table;
+  margin: 0 auto;
+  padding: 0 ;
+  width: 80%;
+  text-align: center;}
+nav li{
+  display: table-cell;
+  min-width: 50px;}
+nav ul{
+  display: table;
+  margin: 0 auto;
+  padding: 0 ;
+  width: 80%;
+  text-align: center;}
+nav li{
+  display: table-cell;
+  min-width: 50px;}
+nav a{
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  color: #555;
+  padding-bottom: 5px;}
+nav li.current{
+  border-bottom: 3px solid #92D050;}
+nav li:hover{
+  color: #E7DA66;
+  border-bottom: 3px solid green;}
