--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,11 +1,6 @@
 body {
   background: #E6F8E8;
-  font-family: "Helvetica Neue",
-  Arial,
-  "Hiragino Kaku Gothic ProN",
-  "Hiragino Sans",
-  Meiryo,
-  sans-serif;
+  font-family: "SF Pro JP", "SF Pro Text", "SF Pro Icons", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ", "Meiryo", "ＭＳ Ｐゴシック", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 16px;
   line-height: 1.5em;}
 main{
@@ -77,22 +72,27 @@ nav li{
   display: table-cell;
   min-width: 50px;}
 nav ul{
-  display: table;
-  margin: 0 auto;
-  padding: 0 ;
-  width: 80%;
-  text-align: center;}
+display: table;
+margin: 0 auto;
+padding: 0 ;
+width: 80%;
+text-align: center;
+}
 nav li{
-  display: table-cell;
-  min-width: 50px;}
+display: table-cell;
+min-width: 50px;
+}
 nav a{
-  display: block;
-  width: 100%;
-  text-decoration: none;
-  color: #555;
-  padding-bottom: 5px;}
+display: block;
+width: 100%;
+text-decoration: none;
+color: #555;
+padding-bottom: 5px;
+}
 nav li.current{
-  border-bottom: 3px solid #92D050;}
+border-bottom: 3px solid #92D050;
+}
 nav li:hover{
-  color: #E7DA66;
-  border-bottom: 3px solid green;}
+color: #E7DA66;
+border-bottom: 3px solid green;
+}
