--- a/css/main-style.css
+++ b/css/main-style.css
@@ -29,24 +29,6 @@ footer, header, hgroup, menu, nav, section {
 }
 /*START*/
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-body {
   background: #E6F8E8;
   font-family: "Helvetica Neue",
   Arial,
@@ -59,7 +41,7 @@ body {
 main{
   background: white;/*背景色*/
   border-radius: 10px;/*角の丸み*/
-  margin: 10px;}
+  margin: 1em;}
 footer{
   clear:both;
   text-align:center;
