--- a/css/main-style.css
+++ b/css/main-style.css
@@ -102,33 +102,20 @@ nav ul{
   display: table;
   margin: 0 auto;
   padding: 0 ;
-  width: 80%;
+  width: 95%;
   text-align: center;}
 nav li{
   display: table-cell;
   min-width: 50px;}
-nav ul{
-display: table;
-margin: 0 auto;
-padding: 0 ;
-width: 80%;
-text-align: center;
-}
-nav li{
-display: table-cell;
-min-width: 50px;
-}
 nav a{
-display: block;
-width: 100%;
-text-decoration: none;
-color: #555;
-padding-bottom: 5px;
-}
+  font-size: 1em;
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  color: #555;
+  padding-bottom: 5px;}
 nav li.current{
-border-bottom: 3px solid #92D050;
-}
+  border-bottom: 3px solid #92D050;}
 nav li:hover{
-color: #E7DA66;
-border-bottom: 3px solid green;
-}
+  color: #E7DA66;
+  border-bottom: 3px solid green;}
