--- a/css/main-style.css
+++ b/css/main-style.css
@@ -44,11 +44,12 @@ footer{
   clear:both;
   text-align:center;
   font-size:0.85em;
-  background-color: #4ec4d3;
-  color: #fff;}
+  background-color: #82E0D2;
+  color: #fff;
+  margin-top: auto;}
 .header {
   width: 100%;
-  margin: 0 auto;}
+  margin: 0;}
 /* TEXT */
 a {
   font-size: 18px;
@@ -63,16 +64,15 @@ h1 {
   font-size: 25px;
   padding: 0.5em 1em;
   margin: 10px;
-  border-bottom: 3px solid #4ec4d3;/*左線*/
+  border-bottom: 3px solid #82E0D2;/*下線*/
   font-weight: bold;
   padding-bottom: 10px;
-  letter-spacing: 2px;
-  } 
+  letter-spacing: 2px;} 
 h2 {
   font-size: 20px;
   padding: 0.5em 1em;
   margin: 20px;
-  border-left: 2px solid #4ec4d3;/*左線*/
+  border-left: 2px solid #82E0D2;/*左線*/
   font-weight: bold;
   padding-bottom: 10px;
   letter-spacing: 1px;} 
@@ -111,10 +111,8 @@ nav li.current{
   border-bottom: 3px solid #92D050;}
 nav li:hover{
   color: #E7DA66;
-  border-bottom: 3px solid green;}
+  border-bottom: 3px solid #82E0D2;}
 #wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100vh;}
-footer {
-  margin-top: auto;}
