--- a/css/main-style.css
+++ b/css/main-style.css
@@ -29,7 +29,7 @@ footer, header, hgroup, menu, nav, section {
 }
 /*START*/
 body {
-  background: #E6F8E8;
+  background: #D8FFFF;
   font-family: "Helvetica Neue",
   Arial,
   "Hiragino Kaku Gothic ProN",
