--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,4 +1,3 @@
-/* RESET-CSS*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)*/
@@ -20,13 +19,11 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
-}
+	vertical-align: baseline;}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+	display: block;}
 /*START*/
 body {
   font-family: "Helvetica Neue",
@@ -110,7 +107,7 @@ nav a{
   text-decoration: none;
   color: #555;
   padding-bottom: 5px;
-  border-bottom: 2px solid #49A89c;}
+  border-bottom: 2px solid #007369;}
 nav li.current{
   border-bottom: 3px solid #92D050;}
 nav li:hover{
