--- a/css/main-style.css
+++ b/css/main-style.css
@@ -16,7 +16,7 @@ footer{
   background-color: #82E0D2;
   color: #fff;
   margin-top: auto;}
-.header {
+header img {
   width: 100%;
   margin: 0;}
 /* TEXT */
@@ -73,22 +73,27 @@ nav li{
   display: table-cell;
   min-width: 50px;}
 nav a{
-  font-size: 1em;
+  border-left: 1px solid#FFF;
+  font-size: 20px;
   display: block;
   width: 100%;
   text-decoration: none;
-  color: #555;
-  padding-bottom: 5px;
-  border-bottom: 2px solid #007369;}
-nav li.current{
-  border-bottom: 3px solid #92D050;}
-nav li:hover{
-  color: #E7DA66;
-  border-bottom: 3px solid #82E0D2;}
+  color: #FFF;
+  padding-bottom: 5px;}
 #wrapper {
   display: flex;
   flex-direction: column;
   min-height: 100vh;}
-header i{font-size: 2em;}
 main i{
   margin-right: 10px;}
+header menu{
+  width: 80%;
+  background-color: gray;
+  margin-left: auto;
+border-top: 5px double white;border-left: 5px double white;border-bottom: 5px double white;
+border-top-left-radius: 10px;
+-webkit-border-top-left-radius: 10px;
+-moz-border-radius-topleft: 10px;
+border-bottom-left-radius: 10px;
+-webkit-border-bottom-left-radius: 10px;
+-moz-border-radius-bottomleft: 10px;}
