--- a/css/main-style.css
+++ b/css/main-style.css
@@ -92,9 +92,4 @@ header menu{
   width: 80%;
   background-color: #767676;
   margin-left: auto;
-border-top-left-radius: 10px;
--webkit-border-top-left-radius: 10px;
--moz-border-radius-topleft: 10px;
-border-bottom-left-radius: 10px;
--webkit-border-bottom-left-radius: 10px;
--moz-border-radius-bottomleft: 10px;}
+  border-radius:3px 0px 0px 30px;
