--- a/css/main-style.css
+++ b/css/main-style.css
@@ -92,4 +92,4 @@ header menu{
   width: 80%;
   background-color: #767676;
   margin-left: auto;
-  border-radius:3px 0px 0px 30px;
+  border-radius: 0px 0px 0px 30px}
