--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,4 +1,3 @@
-/*START*/
 body {
   font-family: "Helvetica Neue",
   Arial,
@@ -8,7 +7,7 @@ body {
   sans-serif;
   border-top: 5px solid #4ec4d3}
 main{
-  border-radius: 10px;/*角の丸み*/
+  border-radius: 10px;
   margin: 1em}
 footer{
   clear:both;
@@ -24,7 +23,6 @@ header menu{
   border-radius: 1px 1px 1px 30px}
 header img {
   width: 100%}
-/* MAIN */
 h1 {
   font-size: 25px;
   margin-left: 10px;
@@ -51,8 +49,8 @@ p {
   line-height: 2.5em;
   letter-spacing: 2px;
   margin: 10px;
-  border-left: 1px dotted #82E0D2;}
-orange{color: #FFA500;}
+  border-left: 1px dotted #82E0D2}
+orange{color: #FFA500}
 .links {
   font-size: 18px;
   color: #474747;
@@ -64,7 +62,7 @@ orange{color: #FFA500;}
   margin: 10px;
   display: flex;
   justify-content: center;
-  align-items: center;}
+  align-items: center}
 .links:hover {
   background-color:#4ec4d3;
   color: #fff}
@@ -72,7 +70,7 @@ nav ul{
   display: table;
   padding: 0 ;
   width: 100%;
-  text-align: center;}
+  text-align: center}
 nav li{
   display: table-cell;
   min-width: 50px;}
@@ -80,14 +78,13 @@ nav a{
   border-left: 1px solid#FFF;
   font-size: 2em;
   display: block;
-  width: 100%;
   text-decoration: none;
   color: #FFF;
   padding-top: 2px;
-  padding-bottom: 2px;}
+  padding-bottom: 2px}
 #wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;}
+  min-height: 100vh}
 main i{
-  margin-right: 10px;}
+  margin-right: 10px}
