--- a/css/main-style.css
+++ b/css/main-style.css
@@ -11,11 +11,13 @@ main{
   margin: 1em}
 footer{
   clear:both;
-  background-color: #82E0D2;
-  padding-top: 10px}
+  background-color: #82E0D2}
 footer p,footer a{
   font-size: 15px;
-  color: #503830;}
+  color: #503830;
+  text-align: center;
+  line-height: 2em;
+  text-decoration: none}
 header menu{
   width: 80%;
   background-color: #767676;
@@ -23,14 +25,14 @@ header menu{
   border-radius: 1px 1px 1px 30px}
 header img {
   width: 100%}
-h1 {
+main h1 {
   font-size: 25px;
   margin-left: 10px;
   padding: 10px;
   border-bottom: 2px solid #82E0D2;/*下線*/
   font-weight: bold;
   letter-spacing: 2px}
-h2 {
+main h2 {
   font-size: 20px;
   padding: 0.5em 1em;
   margin: 20px;
@@ -38,12 +40,12 @@ h2 {
   font-weight: bold;
   padding-bottom: 10px;
   letter-spacing: 1px}
-a {
+main a {
   color: black;
   font-size: 18px;
   line-height: 1.5em;
-  text-decoration: none;}
-p {
+  text-decoration: none}
+main p {
   font-size: 18px;
   padding: 0.5em;
   line-height: 2.5em;
