--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,11 +1,14 @@
+/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain)*/
+html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup ,menu, nav, output, ruby, section, summary,time, mark, audio, video {margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
 body {
   font-family: "Helvetica Neue",
   Arial,
   "Hiragino Kaku Gothic ProN",
   "Hiragino Sans",
   Meiryo,
-  sans-serif;
-  border-top: 5px solid #4ec4d3}
+  sans-serif}
 main{
   border-radius: 10px;
   margin: 1em}
@@ -18,16 +21,37 @@ footer p,footer a{
   text-align: center;
   line-height: 2em;
   text-decoration: none}
+header i{padding: 10px;}
 header menu{
   width: 80%;
+  float: right;
   background-color: #767676;
   margin-left: auto;
   border-radius: 1px 1px 1px 30px}
 header img {
   display: block;
   margin: auto;
-  text-align : center;
-  width: 80%}
+  float: left;
+  width: 100%}
+/* 600px〜959px：タブレット
+------------------------------ */
+@media screen and (min-width:600px) and (max-width:959px) {
+  header menu{width: 50%} 
+  header img{
+    width: 40%;
+    max-width: 1000}
+}
+ 
+/* 960px〜1279px：小型PC
+------------------------------ */
+@media screen and (min-width:960px) {
+ header menu{width: 50%}
+ header img{
+   width: 40%;
+   
+ }
+}
+
 main h1 {
   font-size: 25px;
   margin-left: 10px;
@@ -78,7 +102,7 @@ nav ul{
   text-align: center}
 nav li{
   display: table-cell;
-  min-width: 50px}
+  min-width: 50px;}
 nav a{
   border-left: 1px solid#FFF;
   font-size: 2em;
