--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,14 +1,11 @@
-/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain)*/
-html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup ,menu, nav, output, ruby, section, summary,time, mark, audio, video {margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
 body {
   font-family: "Helvetica Neue",
   Arial,
   "Hiragino Kaku Gothic ProN",
   "Hiragino Sans",
   Meiryo,
-  sans-serif}
+  sans-serif;
+  border-top: 5px solid #4ec4d3}
 main{
   border-radius: 10px;
   margin: 1em}
@@ -53,14 +50,14 @@ header img {
 }
 
 main h1 {
-  font-size: 26px;
+  font-size: 2rem;
   margin-left: 10px;
   padding: 12px;
   border-bottom: 2px solid #82E0D2;/*下線*/
   font-weight: bold;
   letter-spacing: 2px}
 main h2 {
-  font-size: 23px;
+  font-size: 1.5rem;
   padding: 0.5em 1em;
   margin: 20px;
   border-left: 3px solid #82E0D2;/*左線*/
@@ -69,13 +66,13 @@ main h2 {
   letter-spacing: 1px}
 main a {
   color: black;
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 1.5em;
   text-decoration: none}
 main p {
-  font-size: 16px;
+  font-size: 1rem;
   padding: 0.5em;
-  line-height: 2.5em;
+  line-height: 1.5rem;
   letter-spacing: 2px;
   margin: 10px;}
 orange{color: #FFA500}
