--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,3 +1,7 @@
+/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain)*/
+html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup ,menu, nav, output, ruby, section, summary,time, mark, audio, video {margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
 body {
   font-family: "Helvetica Neue",
   Arial,
@@ -18,7 +22,9 @@ footer p,footer a{
   text-align: center;
   line-height: 2em;
   text-decoration: none}
-header i{padding: 10px;}
+header i{
+  font-size: 0.8em;
+  padding: 10px;}
 header menu{
   width: 80%;
   float: right;
@@ -27,28 +33,28 @@ header menu{
   border-radius: 1px 1px 1px 30px}
 header img {
   display: block;
-  margin: auto;
+  margin: 5px;
   float: left;
   width: 100%}
-/* 600px〜959px：タブレット
------------------------------- */
-@media screen and (min-width:600px) and (max-width:959px) {
-  header menu{width: 50%} 
-  header img{
-    width: 40%;
-    max-width: 1000}
+/*Tab*/
+@media (min-width: 415px) {
+  header menu {
+    width:40%;}
+  header img {
+    width:55%;
+    max-width: 300px;}
 }
- 
-/* 960px〜1279px：小型PC
------------------------------- */
-@media screen and (min-width:960px) {
- header menu{width: 50%}
- header img{
-   width: 40%;
-   
- }
+/*PC*/
+@media (min-width: 960px) {
+  header menu {
+    width: 50%;
+    max-width: 500px;
+  }
+  header img {
+    width: 50%;
+    margin-left: 30px;
+    max-width: 500px;}
 }
-
 main h1 {
   font-size: 2rem;
   margin-left: 10px;
