--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,7 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain)*/
-html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup ,menu, nav, output, ruby, section, summary,time, mark, audio, video {margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block;}
 body {
   font-family: "Helvetica Neue",
   Arial,
@@ -55,14 +51,14 @@ header img {
     margin-left: 30px;
     max-width: 500px;}
 }
-main h1 {
+h1 {
   font-size: 2rem;
   margin-left: 10px;
   padding: 12px;
   border-bottom: 2px solid #82E0D2;/*下線*/
   font-weight: bold;
   letter-spacing: 2px}
-main h2 {
+h2 {
   font-size: 1.5rem;
   padding: 0.5em 1em;
   margin: 20px;
@@ -70,12 +66,12 @@ main h2 {
   font-weight: bold;
   padding-bottom: 10px;
   letter-spacing: 1px}
-main a {
+a {
   color: black;
   font-size: 1rem;
   line-height: 1.5em;
   text-decoration: none}
-main p {
+p {
   font-size: 1rem;
   padding: 0.5em;
   line-height: 1.5rem;
@@ -85,18 +81,10 @@ orange{color: #FFA500}
 main i{
   margin-right: 10px;margin-right: 1em;margin-left: 1em;}
 .links {
-  font-size: 1em;padding: 3px;
-  color: #4ec4d3;
-  border-radius: 10px 1px 1px 10px;
-  line-height: 32px;
-  letter-spacing: 2px;
-  border-top: solid 1.5px #4ec4d3;border-bottom: solid 1.5px #4ec4d3;border-left: solid 1.5px #4ec4d3;
-  display: flex;margin-left: auto;
-  justify-content: center;width: 55%;
-  align-items: center;}
-.links:hover {
-  background-color:#4ec4d3;
-  color: #fff}
+  font-size: 1em;
+  border-bottom: 1px dotted #4ec4d3;
+  display:inline-block;float: right;
+  line-height: 2em;}
 nav ul{
   display: table;
   padding: 0 ;
