--- a/css/main-style.css
+++ b/css/main-style.css
@@ -1,6 +1,6 @@
 body {
-  font-family: "Helvetica Neue",
-  Arial,
+   font-family: "Helvetica Neue",
+   Arial,
   "Hiragino Kaku Gothic ProN",
   "Hiragino Sans",
   Meiryo,
@@ -67,10 +67,9 @@ h2 {
   padding-bottom: 10px;
   letter-spacing: 1px}
 a {
-  color: black;
+  color: #82E0D2;
   font-size: 1rem;
-  line-height: 1.5em;
-  text-decoration: none}
+  line-height: 1.5em;}
 p {
   font-size: 1rem;
   padding: 0.5em;
@@ -78,8 +77,6 @@ p {
   letter-spacing: 2px;
   margin: 10px;}
 orange{color: #FFA500}
-main i{
-  margin-right: 10px;margin-right: 1em;margin-left: 1em;}
 .links {
   font-size: 1em;
   border-bottom: 1px dotted #4ec4d3;
@@ -105,3 +102,5 @@ nav a{
   display: flex;
   flex-direction: column;
   min-height: 100vh}
+main i{
+  margin-right: 10px}
