--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background-color: #F9F9F9;
+body {background-color: #F9F8FF;
   font-family: "Helvetica Neue",
    Arial,
   "Hiragino Kaku Gothic ProN",
@@ -15,13 +15,13 @@ ul {padding-left: 0px;
 li {list-style: none;
   text-align: center;
   border-radius: 50px;
-  background: #F9F9F9;
+  background: #F9F8FF;
   padding: 20px;
-  margin: 20px;
   box-shadow: 10px 10px 10px #aeaeae,
               -10px -10px 10px #ffffff;}
 li:hover {box-shadow: inset 10px 10px 10px #c7c7c7,
             inset -10px -10px 10px #ffffff;}
 a {color: #000;
   display:block;
-  text-decoration: none;}
+  text-decoration: none;
+  padding: 20px;}
