--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ li {list-style: none;
   text-align: center;
   border-radius: 50px;
   background: #F9F8FF;
-  padding: 20px;
+  margin: 20px;
   box-shadow: 10px 10px 10px #aeaeae,
               -10px -10px 10px #ffffff;}
 li:hover {box-shadow: inset 10px 10px 10px #c7c7c7,
